kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: exam
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: damarcusthefifthpromax/backend-image:latest
                  ports:
                      - containerPort: 8080
