kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    namespace: exam
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: damarcusthefifthpromax/frontend-image:latest
                  ports:
                      - containerPort: 80
