kubernetes/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mysql-statefulset
    namespace: exam
spec:
    serviceName: mysql-service
    replicas: 2
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                - name: mysql
                  image: mysql
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - name: mysql-data
                        mountPath: /var/lib/mysql
    volumeClaimTemplates:
        - metadata:
              name: mysql-data
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 1Gi
