kubernetes/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-backend
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - host: backend.local
          http:
              paths:
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8080
