kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-crud-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - host: frontend.local
          http:
              paths:
                  - path: /(.*)\.(js|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg)$ # Match common static files
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
                  - path: /?
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
